updating cuz i forgor

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
 </head>
 <body>
+    <input type="hidden" id="userAvatarUrl" value="">
     <div class="container">
         <h1>💌 Наша доска записок</h1>
         <p class="subtitle">Специальный сайт для тебя в твой день рождения! 💖</p>
